testing i.e. alignment bug

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -890,7 +890,6 @@ div.pager .table-options {
 	font-weight: bold;
 	border: 1px solid #ebebeb;
 	padding: 6px 8px 7px;
-	max-width: 100%;
 	line-height: 100%;
 }
 
